--- a/user-katalog.html
+++ b/user-katalog.html
@@ -15,6 +15,7 @@
       <option value="">Semua Kategori</option>
     </select>
 
+      <div class="table-wrapper">
     <table id="tabelBarang">
       <thead>
         <tr>
@@ -26,6 +27,7 @@
       </thead>
       <tbody></tbody>
     </table>
+      </div>
 
     <button onclick="kembali()">🔙 Kembali</button>
   </div>
