--- a/katalog.html
+++ b/katalog.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Katalog Barang</title>
   <link rel="stylesheet" href="katalog.css" />
 </head>
+
 <body>
   <div class="container">
     <h2>Katalog Barang</h2>
@@ -23,6 +25,7 @@
       <table>
         <thead>
           <tr>
+            <th>Kode</th> <!-- Kolom Kode Ditambahkan -->
             <th>Nama</th>
             <th>Level 1</th>
             <th>Level 2</th>
@@ -55,4 +58,5 @@
 
   <script src="katalog.js"></script>
 </body>
+
 </html>
